Fix footer copyright symbol and update footer background color for improved visibility; clean up CSS styles

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    /* color: blue; */
+    
     margin: 0;
     padding: 0;
     background-color: rgb(48, 150, 48);
@@ -22,6 +22,11 @@ form{
     flex-direction: column;
     align-items: center;
     margin-top: 20px;
+}
+.form-group{
+    margin-bottom: 20px;
+    
+
 }
 label{
     margin-bottom: 10px;
@@ -50,7 +55,7 @@ button:hover{
 footer{
     text-align: center;
     padding: 10px;
-    background-color: rgb(48, 150, 48);
+    background-color: rgb(117, 182, 117);
     color: white;
     position: fixed;
     width: 100%;
